--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://himanshusaini05.github.io/jammingcap/",
+  "homepage":"https://himanshusaini05.github.io/jamming/",
   "name": "jamming",
   "version": "0.1.0",
   "private": true,
